# smart-dev-tools-app

./: LICENSE  MACOS_INSTALLATION.md  README.md  changelog.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/: BUILD.md  SETUP.md
.github/workflows/: build.yml  release.yml  release.yml.backup
src/: App.vue  main.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/shared/componentes/: Base64Converter.vue  BaseButton.vue  BaseCard.vue  BaseInput.vue  BasePanel.vue  CertificateAnalyzer.vue  ComponentViewer.vue  Container.vue  DateConverter.vue  FileHasher.vue  Home.vue  JwtDecode.vue  MarkdownEditor.vue  QrCodeTool.vue  RSAKeyAnalyzer.vue  RegexTester.vue  Sidebar.vue  StringHasher.vue  TextAnalyzer.vue  TextDiff.vue  TlsCertificateChecker.vue  UpdateNotification.vue
src/shared/services/: updateService.ts
src/shared/styles/: grid.scss  main.scss
src/types/: node-forge.d.ts
