[package]
name = "smart-dev-tools"
version = "1.5.0"
description = "A collection of useful tools for developers"
repository = "https://github.com/smart-dev-agency/smart-dev-tools-app"
authors = ["Smart Dev Agency"]
edition = "2021"

[lib]
name = "smart_dev_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
rustls-native-certs = "0.6"
x509-parser = "0.16"
base64 = "0.21"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
der-parser = "10"
md5 = "0.7"
